# goodreads-analytics

./: .gitignore  Dockerfile  Dockerfile.dev  Procfile  fly.toml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  wsgi.py
data/: db.csv
files/: goodreads_export.csv  style.css
goodreads_visualizer/: api.py  app.py  db.py  df_utils.py  goodreads_api.py  main.py  models.py  orchestrator.py  page_parser.py  upsert_utils.py  url_utils.py  utils.py
goodreads_visualizer/sections/: __init__.py  books_read_compared_to_year.py  books_read_this_year.py
goodreads_visualizer/static/css/: styles.css
goodreads_visualizer/templates/: base.html  data_partial.html  index.html  input_partial.html
goodreads_visualizer/templates/components/: spinner.html
goodreads_visualizer/templates/users/: index.html
supabase/: config.toml
supabase/migrations/: 20230920232522_remote_schema.sql  20230921001822_remote_schema.sql  20231109012210_remote_schema.sql  20231109013607_remote_schema.sql  20231109014041_remote_schema.sql  20231110003316_remote_schema.sql  20231110011359_remote_schema.sql
